Финальные правки: правка импорт, перепроверка тестов и пометки xfail

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,7 @@
 markers =
     login_guest: marker for guest on the main page
     new: marker for new tests
+    need_review: требуется проверить на ревью
 
 filterwarnings =
     ignore::pytest.PytestUnknownMarkWarning
